<resources>
    <string name="app_name">Sync.Me</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="location">Location</string>
    <string name="postcode">Post Code</string>
    <string name="add">Add Contact</string>
    <string name="beginingText">Welcome to Sync.Me app for people groups contacts,if you need to recall your subtleties like name phonenumber area add it ,likewise assuming that you are looking for others reaches you can simply see them and quest for who you need</string>
</resources>